--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,12 @@ body {
 .header--dark {
     background-color: rgb(51, 57, 64);
     color: rgb(236, 236, 236);
+    margin-top: 2rem;
+    height: 5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.5rem;
 }
 
 .header__title {
@@ -24,6 +30,7 @@ body {
 
 .header__search {
     display: inline;
+    padding: 0;
 }
 
 .search__input {
@@ -39,17 +46,63 @@ body {
 
 .search__btn {
     background-color: rgb(0, 123, 255);
+    padding: 0.375rem 0.75rem;
+    margin: -0.15rem;
+    font-size: 1.2rem;
+    border: 0;
+}
+
+.search__btn i {
+    color: white;
 }
 
 /* Main */
+.main-container {
+    display: flex;
+}
+
+.left-sidebar {
+    width: 20%;
+}
+
+.content {
+    width: 80%;
+    padding: 2rem;
+}
+
 .main__nav {
     background-color: rgb(33, 37, 41);
+    color: gray;
+}
+
+.nav__ul {
+    list-style: none;
+}
+
+.nav__ul li {
+    padding: 2rem;
 }
 
 .main__breadcrumb {
     background-color: rgb(233, 236, 239);
     border-radius: .25rem;
     padding: 1rem 1.5rem;
+}
+
+.main__cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 2.5rem 0;
+}
+
+.main__card {
+    width: 22rem;
+    height: 13rem;
+    border-radius: 1rem;
+    padding: 2rem;
+    color: white;
+    font-size: 1.5rem;
 }
 
 .card__top {
