--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html {
 body {
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 /* Header */
@@ -25,7 +26,7 @@ body {
 
 .header__title {
     display: inline;
-    font-size: 1.25rem;
+    font-size: 2rem;
 }
 
 .header__search {
@@ -36,24 +37,26 @@ body {
 .search__input {
     border-radius: 4px 0 0 4px;
     padding: 0.375rem 0.75rem;
-    font-size: 1.2rem;
+    font-size: 1.7rem;
+    transition: border-color .15s;
 }
 
 .search__input:focus {
-    border: 1px solid rgb(128, 189, 255);
-    transition: border .15s;
+    border: .32rem solid rgb(128, 189, 255);
 }
 
 .search__btn {
     background-color: rgb(0, 123, 255);
     padding: 0.375rem 0.75rem;
-    margin: -0.15rem;
-    font-size: 1.2rem;
+    margin: -0.21rem;
+    font-size: 1.81rem;
     border: 0;
+    border-radius: 0 4px 4px 0;
 }
 
 .search__btn i {
     color: white;
+    font-size: 1.5rem;
 }
 
 /* Main */
@@ -62,31 +65,63 @@ body {
 }
 
 .left-sidebar {
-    width: 20%;
+    width: 17%;
 }
 
 .content {
-    width: 80%;
+    width: 83%;
     padding: 2rem;
+}
+
+.content h1 {
+    font-size: 4rem;
+    margin: 0 0 .5rem 0;
 }
 
 .main__nav {
     background-color: rgb(33, 37, 41);
-    color: gray;
+    color: rgba(255, 255, 255, .5);
 }
 
 .nav__ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__header {
+    color: rgba(255, 255, 255, .3);
 }
 
 .nav__ul li {
-    padding: 2rem;
+    padding: 1.8rem 1.5rem;
+    font-size: 1.7rem;
+}
+
+.nav__ul li.nav__header {
+    font-size: 1rem;
+    padding-bottom: 0;
+    text-transform: uppercase;
+}
+
+.nav__ul li:nth-child(2) {
+    color: white;
+}
+
+.nav__ul li:last-child {
+    padding-bottom: 13.5rem;
+}
+
+.nav__ul i {
+    margin-right: .8rem;
 }
 
 .main__breadcrumb {
     background-color: rgb(233, 236, 239);
     border-radius: .25rem;
     padding: 1rem 1.5rem;
+    color: rgba(0, 0, 0, .5);
+    font-size: 1.7rem;
 }
 
 .main__cards {
@@ -97,21 +132,41 @@ body {
 }
 
 .main__card {
-    width: 22rem;
-    height: 13rem;
-    border-radius: 1rem;
-    padding: 2rem;
+    width: 22.3rem;
+    height: 11rem;
+    border-radius: 0.5rem;
     color: white;
-    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
 
 .card__top {
     border-radius: .25rem .25rem 0 0;
-    transition: background-color .3s;
+    height: 60%;
+    padding-left: 2rem;
+    border-bottom: 1px solid rgba(0, 0, 0, .07);
+    line-height: 7.1rem;
+    font-size: 1.5rem;
 }
 
 .card__bottom {
     border-radius: 0 0 .25rem .25rem;
+    height: 40%;
+    line-height: 5rem;
+    padding-left: 2rem;
+    font-size: 1.2rem;
+}
+
+.card__bottom span {
+    padding-left: 11rem;
+    font-weight: bold;
+    user-select: none;
+}
+
+.card__top:hover,
+.card__bottom:hover {
+    background-color: rgba(0, 0, 0, .2);
     transition: background-color .3s;
 }
 
