--- a/css/style.css
+++ b/css/style.css
@@ -30,24 +30,27 @@ body {
 }
 .search__input {
 	transition: border-color .15s;
+	outline: none;
+	border: 1px solid white;
 	border-radius: 4px 0 0 4px;
 	padding: 0.375rem 0.75rem;
-	font-size: 1.7rem;
+	font-size: 1.2rem;
 }
 .search__input:focus {
-	border: .32rem solid rgb(128, 189, 255);
+	border-color: rgb(128, 189, 255);
 }
 .search__btn {
-	margin: -0.21rem;
-	border: 0;
+	margin: -0.3rem;
+	outline: none;
+	border: 1px solid rgb(0, 123, 255);
 	border-radius: 0 4px 4px 0;
 	background-color: rgb(0, 123, 255);
 	padding: 0.375rem 0.75rem;
-	font-size: 1.81rem;
+	font-size: 1.2rem;
 }
 .search__btn i {
 	color: white;
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 }
 /* Main */
 .main-container {
